# Vertex-CLI

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  QUICKSTART.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  test.yml
ARCHITECTURE/: index.html
cli/: ai_model_manager.py  chat_history.py  config_manager.py  llm.py  llm_providers.py  llm_service.py  prettify_llm_output.py  prompt.py  utils.py
cli/models/: __init__.py  anthropic_provider.py  base.py  base_provider.py  factory.py  gemini_provider.py  openai_provider.py
cli_tool_docs/: index.html
config/: default_config.json
contributors_guide/: index.html
docs/: ARCHITECTURE.md
references/: index.html
search/: search_index.json
tests/: conftest.py  test_cli.py  test_smoke.py  test_vertex.py
